--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,171 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400&display=swap');
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  background-image: url('images/delish-homemade-pizza.png');
+  background-repeat: repeat;
+  background-size: cover;
+  height: 100vh;
+  font-size: 20px;
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+body::before {
+  content: '';
+  position: absolute;
+  width: 100vw;
+  height: 150vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.greeting-div {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: auto;
+  padding: 15px;
+  background: rgba(250, 250, 250, 0.7);
+  color: rgb(71, 40, 41);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+  text-align: center;
+  z-index: 1;
+}
+
+form {
+  position: absolute;
+  top: 7%;
+  width: 50%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 55%;
+  margin: 2rem;
+  border-radius: 10px;
+}
+
+fieldset,
+.receipt {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin: 15px;
+  padding: 0.5rem 1.7rem 1.5rem;
+  background: rgba(224, 219, 219, 0.7);
+  border-radius: 8px;
+  border: 2px solid grey;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.9);
+}
+legend {
+font-size: 1.4rem;
+color: rgb(11, 63, 19);
+}
+
+select {
+  margin-left: 10px;
+  border-radius: 3px;
+}
+
+h5 {
+  margin-left: 40px;
+  line-height: 0;
+}
+
+label {
+  margin-top: 1rem;
+  margin-left: 4rem;
+}
+
+input[type='text'],
+input[type='tel'],
+input[type='email'] {
+  width: 60%;
+  margin-left: 4rem;
+  
+}
+
+input[type='text'],
+input[type='tel'],
+input[type='email'],
+.select {
+  border: 1px solid #999;
+  font-size: 18px;
+  background-color: #eee;
+  border-radius: 5px;
+  padding: 6px;
+  color: rgb(185, 8, 8);
+}
+
+input[type='text']:focus,
+input[type='tel']:focus,
+input[type='email']:focus {
+  outline: none !important;
+  border-color: rgb(185, 8, 8);
+  box-shadow: 0 0 7px rgb(185, 8, 8);
+}
+
+input[type='checkbox'],
+input[type='radio'] {
+  width: 15px;
+  margin-right: 7px;
+}
+
+input[type='checkbox'] {
+  margin-left: 30px;
+}
+
+.select {
+  width: 50px;
+  height: 30px;
+}
+
+button {
+  background-color: #237418;
+  border-color: rgb(11, 63, 19);
+  color: rgb(221, 253, 226);
+  padding: 5px;
+  border-radius: 6px;
+  font-size: 1.2rem;
+  width: 130px;
+  margin: 3px auto 0;
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+  font-size: 1.5rem;
+  border: 1px solid rgb(11, 63, 19);
+}
+
+ul li {
+  margin: 15px 0;
+}
+
+.receipt {
+  position: absolute;
+  top: 50%;
+  height: auto;
+  margin-top: -150px;
+}
+
+.receipt h3 {
+  font-weight: bold;
+  color: rgb(11, 63, 19);
+  margin-bottom: 20px;
 }
