--- a/src/index.css
+++ b/src/index.css
@@ -36,17 +36,20 @@ code {
 }
 
 .greeting-div {
+  display: flex;
+  justify-content: space-between;
   position: fixed;
   top: 0;
   width: 100%;
   height: auto;
-  padding: 15px;
+  padding: 25px;
   background: rgba(250, 250, 250, 0.7);
-  color: rgb(71, 40, 41);
+  color: #a80d27;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
   text-align: center;
   z-index: 1;
 }
+
 
 form {
   position: absolute;
@@ -162,10 +165,4 @@ ul li {
   top: 50%;
   height: auto;
   margin-top: -150px;
-}
-
-.receipt h3 {
-  font-weight: bold;
-  color: rgb(11, 63, 19);
-  margin-bottom: 20px;
 }
